correcoes do pmd